# free-claude-code

./: .env.example  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: tests.yml
scripts/: install.ps1  install.sh
smoke/: capabilities.py  features.py
smoke/lib/: e2e.py
smoke/product/: test_messaging_product_live.py
src/free_claude_code/cli/launchers/: common.py
src/free_claude_code/config/: logging_config.py  settings.py
src/free_claude_code/core/: trace.py
src/free_claude_code/messaging/: __init__.py  command_context.py  command_dispatcher.py  commands.py  models.py  node_event_pipeline.py  node_runner.py  turn_intake.py  voice.py  workflow.py
src/free_claude_code/messaging/session/: persistence.py  store.py
src/free_claude_code/messaging/trees/: __init__.py  graph.py  identity.py  manager.py  node.py  processor.py  queue.py  repository.py  runtime.py  snapshot.py  transitions.py
src/free_claude_code/providers/nvidia_nim/: request_options.py
src/free_claude_code/providers/openai_chat/: profiles.py
src/free_claude_code/providers/runtime/: config.py
src/free_claude_code/runtime/: application.py  bootstrap.py
tests/api/: test_app_lifespan_and_errors.py
tests/config/: test_config.py  test_logging_config.py
tests/contracts/: test_feature_manifest.py  test_import_boundaries.py  test_uv_policy.py
tests/core/: test_trace.py
tests/messaging/: test_discord_platform.py  test_handler.py  test_handler_context_isolation.py  test_handler_integration.py  test_handler_markdown_and_status_edges.py  test_message_tree_transitions.py  test_messaging.py  test_platform_voice_flow.py  test_restart_reply_restore.py  test_session_store_edge_cases.py  test_telegram.py  test_tree_concurrency.py  test_tree_customer_regressions.py  test_tree_ownership_concurrency.py  test_tree_processor.py  test_tree_queue.py  test_tree_repository.py  test_voice_handlers.py  test_voice_services.py
tests/providers/: test_cerebras.py  test_nvidia_nim_request.py  test_ollama.py  test_provider_runtime.py
tests/scripts/: test_installers.py
